feat: outbox consumer

--- a/src/FixedIncome.Application/FixedIncome.Application.csproj
+++ b/src/FixedIncome.Application/FixedIncome.Application.csproj
@@ -19,4 +19,8 @@
       <ProjectReference Include="..\FixedIncome.Infrastructure\FixedIncome.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="FixedIncomeSimulation\Abstractions\Outbox\" />
+    </ItemGroup>
+
 </Project>
