--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,8 +25,5 @@ jobs:
       - name: Build solution
         run: dotnet build --no-restore  --configuration Release
         
-      - name: Run tests
-        run: dotnet test --no-build --configuration Release --verbosity normal
-        
-      
-    
+      - name: Run unit tests (FixedIncome.Domain.Tests)
+        run: dotnet test ./tests/FixedIncome.Domain.Tests/FixedIncome.Domain.Tests.csproj --no-build --configuration Release --verbosity normal
