--- a/src/Workers/FileCreation.Consumer/FileCreation.Consumer.csproj
+++ b/src/Workers/FileCreation.Consumer/FileCreation.Consumer.csproj
@@ -21,4 +21,14 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\FixedIncome.CrossCutting\FixedIncome.CrossCutting.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appSettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
