--- a/src/FixedIncome.Application/FixedIncome.Application.csproj
+++ b/src/FixedIncome.Application/FixedIncome.Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Carter" Version="8.0.0" />
+      <PackageReference Include="CsvHelper" Version="33.0.1" />
       <PackageReference Include="Dapper" Version="2.1.66" />
       <PackageReference Include="MediatR" Version="12.5.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
@@ -21,6 +22,7 @@
 
     <ItemGroup>
       <Folder Include="FixedIncomeSimulation\Abstractions\Outbox\" />
+      <Folder Include="RabbitMq\" />
     </ItemGroup>
 
 </Project>
