--- a/src/Workers/FileCreation.Consumer/FileCreation.Consumer.csproj
+++ b/src/Workers/FileCreation.Consumer/FileCreation.Consumer.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\FixedIncome.Application\FixedIncome.Application.csproj" />
       <ProjectReference Include="..\..\FixedIncome.CrossCutting\FixedIncome.CrossCutting.csproj" />
     </ItemGroup>
 
