--- a/src/FixedIncome.CrossCutting/FixedIncome.CrossCutting.csproj
+++ b/src/FixedIncome.CrossCutting/FixedIncome.CrossCutting.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\FixedIncome.Application\FixedIncome.Application.csproj" />
       <ProjectReference Include="..\FixedIncome.Infrastructure\FixedIncome.Infrastructure.csproj" />
     </ItemGroup>
 
