--- a/src/FixedIncome.Infrastructure/FixedIncome.Infrastructure.csproj
+++ b/src/FixedIncome.Infrastructure/FixedIncome.Infrastructure.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\FixedIncome.Application\FixedIncome.Application.csproj" />
       <ProjectReference Include="..\FixedIncome.Domain\FixedIncome.Domain.csproj" />
     </ItemGroup>
 
@@ -29,6 +30,11 @@
       <Reference Include="Microsoft.Extensions.Hosting.Abstractions">
         <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.15\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Factories\Outbox\" />
+      <Folder Include="Persistence\FixedIncomeSimulation\" />
     </ItemGroup>
 
 </Project>
