--- a/src/FixedIncome.Infrastructure/FixedIncome.Infrastructure.csproj
+++ b/src/FixedIncome.Infrastructure/FixedIncome.Infrastructure.csproj
@@ -8,6 +8,9 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.1.66" />
+      <PackageReference Include="linq2db" Version="5.4.1" />
+      <PackageReference Include="linq2db.EntityFrameworkCore" Version="9.0.0" />
+      <PackageReference Include="linq2db.PostgreSQL" Version="5.4.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
