--- a/src/FixedIncome.Infrastructure/FixedIncome.Infrastructure.csproj
+++ b/src/FixedIncome.Infrastructure/FixedIncome.Infrastructure.csproj
@@ -20,6 +20,7 @@
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.4" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="Polly" Version="8.5.2" />
       <PackageReference Include="RabbitMQ.Client" Version="6.0.0" />
     </ItemGroup>
 
