--- a/src/FixedIncome.API/FixedIncome.API.csproj
+++ b/src/FixedIncome.API/FixedIncome.API.csproj
@@ -32,6 +32,9 @@
       <Content Include="..\..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+      <Content Update="appsettings.Development.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
